@@ -89,8 +89,8 @@ public class YearDistributionCommand extends ConcurrentCommand<TimeFrameParamete
 
         var embedBuilder = new ChuuEmbedBuilder(e)
                 .setDescription(a)
-                .setAuthor(String.format("%s's years%s", uInfo.getUsername(), params.getTime().getDisplayString()), CommandUtil.getLastFmUser(params.getLastFMData().getName()), uInfo.getUrlImage())
-                .setFooter("%s has albums from %d different %s".formatted(CommandUtil.stripEscapedMarkdown(uInfo.getUsername()), counts.size(), CommandUtil.singlePlural(counts.size(), "year", "years")), null);
+                .setAuthor(String.format("%s's years%s", uInfo.username(), params.getTime().getDisplayString()), CommandUtil.getLastFmUser(params.getLastFMData().getName()), uInfo.urlImage())
+                .setFooter("%s has albums from %d different %s".formatted(CommandUtil.stripEscapedMarkdown(uInfo.username()), counts.size(), CommandUtil.singlePlural(counts.size(), "year", "years")), null);
 
         e.sendMessage(embedBuilder.build()).queue(m ->
                 new Reactionary<>(lines, m, 20, embedBuilder));
